# LFP_P2_1S2026_201907719

./: CMakeLists.txt  README.md  errormanager.cpp  lexicalanalyzer.cpp  lexicalanalyzer.h  main.cpp  reportgenerator.h
exmaples/: caso1.task  caso10.task  caso2.task  caso3.task  caso4.task  caso5.task  caso6.task  caso7.task  caso8.task  caso9.task
src/: errormanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  reportgenerator.cpp  syntaxanalyzer.cpp  syntaxanalyzer.h  token.cpp  token.h
test/: prueba.task  prueba2.task  prueba3.task  prueba4.task
